# seoGraph

./: .gitignore  .replit  Dockerfile  Dockerfile.production  README.md  debug_frontend.html  deploy.sh  docker-compose.production.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements-optional.txt  requirements.txt  setup.sh
agents/: __init__.py  competitor_analysis.py  content_analysis.py  content_generation.py  graph_management.py  quality_assurance.py  seo_research.py  trend_analysis.py
archive/: README.md
archive/development-files/: CLAUDE.md  DEPLOYMENT.md  MODULAR_ARCHITECTURE.md  PLANNING.md  TASK.md
archive/development-files/PRPs/: seo_content_knowledge_graph_enhancement.md
archive/development-files/legacy-databases/: seo_content_system.db  serpbear_db.sqlite
archive/development-files/server-implementations/: debug_server.py  minimal_server.py  minimal_working_server.py  simple_fastapi.py  start_server.py
archive/development-files/sql-iterations/: complete_workspace_setup.sql  create_workspace_data.sql  create_workspace_data_final.sql  create_workspace_data_fixed.sql  create_workspace_data_simple.sql  database_setup.sql  database_setup_fixed.sql  database_setup_safe.sql  disable_rls_temp.sql  fix_rls_policies.sql
archive/development-files/status-docs/: INITIAL.md  SERPBEAR_FINAL_STATUS.md
archive/development-files/test-scripts/: demo_pdf_processing.py  test_json_agent.py  test_pdf_upload.py  test_prp_workflow_integration.py  test_server.py  test_service_key.py
auth/: __init__.py  dependencies.py
cli/: main.py
cli/commands/: __init__.py  content_commands.py  seo_commands.py
config/: brand_voice.py  logging_config.py  searxng_settings.yml  seo_rules.py  settings.py
data/dev-configs/: minimal_serpbear_settings.json  serpbear_settings.json
database/: graph_schema.py  neo4j_client.py  qdrant_client.py  supabase_client.py  supabase_schema.sql
models/: analytics_models.py  content_models.py  graph_models.py  seo_models.py  user_models.py  workflow_models.py
monitoring/: README.md  __init__.py  health_monitor.py  otel_monitor.py
nginx/: nginx.conf
scripts/: start-infrastructure.sh
scripts/dev/: scrapingant_proxy.py  serpbear_keyword_updater.py  start_bridge_server.py
scripts/test/: test_content_generation_rag.py  test_imports.py  test_rag_direct.py  test_rag_integration.py  test_runner.py
services/: __init__.py  competitor_monitoring.py  embedding_service.py  gap_analysis.py  workflow_orchestrator.py
src/agents/: agent_coordinator.py  base_agent.py  content_analysis_agent.py  content_generation_agent.py  graph_management_agent.py  quality_assurance_agent.py  seo_research_agent.py
src/agents/competitor_analysis/: __init__.py  agent.py  analysis_workflows.py  content_analyzer.py  keyword_analyzer.py  models.py
src/agents/content_generation/: __init__.py  agent.py  prompts.py  rag_tools.py  tools.py
src/agents/json_analysis/: __init__.py  agent.py
src/auth/: auth_middleware.py  google_oauth.py
src/config/seo_rules/: __init__.py  default_rules.py  engine.py  models.py  validators.py
src/database/: content_service.py  database.py  models.py  neo4j_client.py  qdrant_client.py  supabase_client.py
src/ingestion/: __init__.py  base_ingester.py  deduplication_service.py  file_ingester.py  gdrive_ingester.py  ingestion_coordinator.py  queue_processor.py  website_ingester.py
src/services/: analytics_service.py  auth_service.py  brief_structure_parser.py  content_ingestion.py  custom_serp_scraper.py  google_ads_service.py  google_drive_service.py  google_search_console.py  graph_vector_service.py  keyword_manager.py  keyword_sync_service.py  langfuse_service.py  openai_seo.py  prp_workflow_service.py  prp_workflow_service.py.backup  rank_processor.py  ranking_graph_service.py  ranking_scheduler.py  searxng_service.py  serp_content_integration_service.py  serpbear_bridge.py  serpbear_client.py  serpbear_config.py  serpbear_database.py  topic_extraction_service.py  unified_content_service.py  unified_seo_data_service.py  workflow_orchestrator.py
src/services/prp_workflow/: __init__.py  content_generator.py  models.py  orchestrator.py  phase_analyzers.py
tests/test_agents/: test_trend_analysis.py
tests/test_agents/test_content_generation/: __init__.py  test_agent.py  test_prompts.py  test_rag_tools.py  test_structure.py  test_tools.py
tests/test_api/: test_settings_routes.py  test_workspace_routes.py  test_workspace_settings_routes.py
tests/test_cli/: __init__.py  test_cli_main.py
tests/test_config/: __init__.py  test_settings.py
tests/test_database/: test_neo4j_client.py
tests/test_models/: __init__.py  test_workflow_models.py
tests/test_monitoring/: __init__.py  test_health_monitor.py
tests/test_services/: test_analytics_service.py
tests/test_templates/: test_template_components.py  test_template_rendering.py
utils/: __init__.py  cache.py  rate_limiting.py  tenant_mapper.py
web/: main.py
web/api/: __init__.py  batch_manager.py  brief_routes.py  content_analysis.py  content_auth.py  content_generation.py  content_routes.py  content_storage.py  content_upload.py  debug_routes.py  graph_debug.py  graph_simple.py  health_routes.py  integrations.py  prp_workflow_routes.py  research_routes.py  seo_monitor_routes.py  seo_routes.py  serp_content_integration_routes.py  serpbear_domain_routes.py  serpbear_integration_routes.py  serpbear_settings_routes.py  settings_routes.py  url_import.py  workspace_routes.py  workspace_settings_routes.py
web/api/graph/: __init__.py  competitor_landscape.py  content_knowledge.py  keyword_network.py  models.py  router.py  semantic_clusters.py  utils.py
web/static/css/: base.css  graph-visualization.css
web/static/js/: debug-utils.js  graph-visualization.js  seo-api.js  seo-charts.js  seo-dashboard.js  workspace_manager.js
web/templates/: auth.html  base.html  content.html  dashboard.html  graph.html  graph_visualization.html  knowledge_base.html  login.html  onboarding.html  seo.html  seo_research.html  settings.html
(+18 files in other folders)
